--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8">
     <title>yijiankongjian</title>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="static/js/jquery_oldversion_compatible.js"></script>
+    <script src="static/js/calendar.min.js
+"></script>
+    <script src="static/js/jquery.jqprint.js"></script>
     <script src="https://cdn.bootcss.com/iScroll/5.2.0/iscroll.js"></script>
     <script src="static/lib/js/dropkick.min.js"></script>
+    <link rel="stylesheet" href="static/css/calendar.min.css">
     <link rel="stylesheet" href="static/lib/css/dropkick.css">
   </head>
   <style>
